--- a/src/app/global/_main.scss
+++ b/src/app/global/_main.scss
@@ -112,6 +112,9 @@ $near_black: #0e0b16;
   background: $purple;
   border: 1px solid $purple;
   padding: 0.75rem 1.5rem;
+  outline: 2px solid $purple;
+  outline-offset: 2px;
+  border-radius: 50px;
   &:hover {
     background: darken($purple, 3%);
     color: $white;
